--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "mdb-ui-kit": "^6.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
-    "swiper": "^11.0.3"
+    "swiper": "^11.0.3",
+    "unorm": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
